# hanjadict

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/handoff/: 2026-05-05-v0.0.1-launch.md
pipeline/: 01_build_characters.py  02_enrich_unihan.py  03_parse_nikl.py  04_build_fts.py  build_all.py  make_icon.py  schema.sql  verify.py
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: CharCard.tsx  ResultList.tsx  SearchBar.tsx  WordCard.tsx
src/data/: mock.ts
src/lib/: api.ts
