[package]
name = "hanjadict"
version = "0.0.1"
description = "오프라인 한자 사전"
authors = ["Lee Jinwoo"]
license = "MIT"
edition = "2021"

[lib]
name = "hanjadict_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }   # bundled SQLite incl. FTS5
thiserror = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
